force-app/main/default/objects/leankor__Zone__c/leankor__Zone__c.object-meta.xml
<CustomObject>
    <description>A zone establishes an area on a value stream which has significance to the business process. When kanban cards are moved into and out of zones, a rule engine determines the result.</description>
    <label>Zone</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>