force-app/main/default/objects/leankor__Zone__c/fields/leankor__Bottom__c.field-meta.xml
<CustomField>
    <fullName>leankor__Bottom__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The bottom edge position of the zone.</description>
    <inlineHelpText>Enter the bottom edge position of the zone. This should be roughly equal to &quot;top&quot; + &quot;height&quot;.  This value is for future use and so leaving the default or zero is acceptable.</inlineHelpText>
    <label>Bottom</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>