force-app/main/default/objects/leankor__Zone__c/fields/leankor__CardsPerRow__c.field-meta.xml
<CustomField>
    <fullName>leankor__CardsPerRow__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cards Per Row</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>