force-app/main/default/objects/leankor__Zone__c/fields/leankor__CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>leankor__CaseStatus__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Status of Case</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status of Case</inlineHelpText>
    <label>CaseStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>