force-app/main/default/objects/leankor__Zone__c/fields/leankor__CmpID__c.field-meta.xml
<CustomField>
    <fullName>leankor__CmpID__c</fullName>
    <defaultValue>&quot;zone-1&quot;</defaultValue>
    <description>The component ID is a system-generated string used as an HTML ID field. It need not be globally unique across the entire system, but it must be unique within a value stream.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a unique string used as the HTML ID field. It need not be globally unique across the entire system, but it must be unique within a value stream.</inlineHelpText>
    <label>Component ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>