force-app/main/default/objects/leankor__Zone__c/fields/leankor__CompletionRate__c.field-meta.xml
<CustomField>
    <fullName>leankor__CompletionRate__c</fullName>
    <description>The completion rate is how many deliverables/units can be processed per day/hour or whatever the unit of measure will be.</description>
    <inlineHelpText>The completion rate is how many deliverables/units can be processed per day/hour or whatever the unit of measure will be.</inlineHelpText>
    <label>Completion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>