force-app/main/default/objects/leankor__Zone__c/fields/leankor__CompletionRateUnits__c.field-meta.xml
<CustomField>
    <fullName>leankor__CompletionRateUnits__c</fullName>
    <description>This is the units of measure for Completion Rate and by extension, the Lead Time.</description>
    <inlineHelpText>This is the units of measure for Completion Rate and by extension, the Lead Time.</inlineHelpText>
    <label>Completion Rate Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
                <default>true</default>
                <label>Hours</label>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>