force-app/main/default/objects/leankor__Zone__c/fields/leankor__CSSLayout__c.field-meta.xml
<CustomField>
    <fullName>leankor__CSSLayout__c</fullName>
    <description>The CSS3 to be applied to this zone prior to rendering on the web page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the valid CSS3 style to add to the zone prior to rendering on the web page.</inlineHelpText>
    <label>CSS Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>