force-app/main/default/objects/leankor__Zone__c/fields/leankor__DefaultHeight__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultHeight__c</fullName>
    <description>Default Height of zone</description>
    <label>Default Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>