force-app/main/default/objects/leankor__Zone__c/fields/leankor__DefaultWidth__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultWidth__c</fullName>
    <description>Default Width of Zone</description>
    <label>Default Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>