force-app/main/default/objects/leankor__Zone__c/fields/leankor__EntryFlowName__c.field-meta.xml
<CustomField>
    <fullName>leankor__EntryFlowName__c</fullName>
    <description>The unique name of a Force.com Flow which will be executed every time a kanban card enters the zone. This is NOT the &quot;Flow Name&quot;, but rather the &quot;Unique Name&quot; which has no spaces.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the unique name of a Force.com Flow which will be executed every time a kanban card enters the zone. This is NOT the &quot;Flow Name&quot;, but rather the &quot;Unique Name&quot; which was given to the flow upon creation.</inlineHelpText>
    <label>Entry Flow Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>