force-app/main/default/objects/leankor__Zone__c/fields/leankor__Height__c.field-meta.xml
<CustomField>
    <fullName>leankor__Height__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The height of the zone as measured in pixels.</description>
    <inlineHelpText>Enter the height of the zone in pixels.</inlineHelpText>
    <label>Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>