force-app/main/default/objects/leankor__Zone__c/fields/leankor__JSONDefinition__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONDefinition__c</fullName>
    <description>This is the additional configuration information which allows customization of the zone. You must use JSON representation of a Sencha Touch 2 &quot;config&quot; block of a Container class.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the valid JSON representation of a Sencha Touch 2 &quot;config&quot; block of a Container class.</inlineHelpText>
    <label>JSON Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>