force-app/main/default/objects/leankor__Zone__c/fields/leankor__KanbanCardCount2__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCardCount2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of kanban cards currently inside this zone.</description>
    <inlineHelpText>The number of kanban cards currently inside this zone.</inlineHelpText>
    <label>Kanban Card Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>