force-app/main/default/objects/leankor__Zone__c/fields/leankor__KanbanCardThroughput__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCardThroughput__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of kanban cards that pass through the zone in a 24 hour period.</description>
    <inlineHelpText>The number of kanban cards that pass through the zone in a 24 hour period.</inlineHelpText>
    <label>Kanban Card Throughput</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>