force-app/main/default/objects/leankor__Zone__c/fields/leankor__kanbanSequence__c.field-meta.xml
<CustomField>
    <fullName>leankor__kanbanSequence__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>This method use for white board to keep records for card for order manage.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This method use for white board to keep records for card for order manage.</inlineHelpText>
    <label>Kanban Sequence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>