force-app/main/default/objects/leankor__Zone__c/fields/leankor__LeadTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__LeadTime__c</fullName>
    <description>The lead time is the total work in progress (WIP) items at a given interval, divided by the Completion Rate.</description>
    <inlineHelpText>The lead time is the total work in progress (WIP) items at a given interval, divided by the Completion Rate.</inlineHelpText>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>