force-app/main/default/objects/leankor__Zone__c/fields/leankor__Left__c.field-meta.xml
<CustomField>
    <fullName>leankor__Left__c</fullName>
    <defaultValue>300</defaultValue>
    <description>The position value of the left-most edge of the zone.</description>
    <inlineHelpText>Enter the left-most edge position of the zone. This should be identical to the X field in this record.</inlineHelpText>
    <label>Left</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>