force-app/main/default/objects/leankor__Zone__c/fields/leankor__OpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunityStageName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OpportunityStageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>