force-app/main/default/objects/leankor__Zone__c/fields/leankor__ParentZone__c.field-meta.xml
<CustomField>
    <fullName>leankor__ParentZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used on white board to keep zone parent ID.</description>
    <inlineHelpText>This field is used on white board to keep zone parent ID.</inlineHelpText>
    <label>Parent Zone</label>
    <referenceTo>leankor__Zone__c</referenceTo>
    <relationshipLabel>Zones</relationshipLabel>
    <relationshipName>Zones</relationshipName>
    <type>Lookup</type>
</CustomField>