force-app/main/default/objects/leankor__Zone__c/fields/leankor__Swimlane__c.field-meta.xml
<CustomField>
    <fullName>leankor__Swimlane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field contain Parent Swimlane ID.</description>
    <inlineHelpText>This Field contain Parent Swimlane ID.</inlineHelpText>
    <label>Swimlane</label>
    <referenceTo>leankor__Swimlane__c</referenceTo>
    <relationshipLabel>Zones</relationshipLabel>
    <relationshipName>Zones</relationshipName>
    <type>Lookup</type>
</CustomField>