force-app/main/default/objects/leankor__Zone__c/fields/leankor__Title__c.field-meta.xml
<CustomField>
    <fullName>leankor__Title__c</fullName>
    <defaultValue>&quot;zone 1&quot;</defaultValue>
    <description>The title of the zone which will show up at the top of the object on the web page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a descriptive title for the zone. It will be displayed on the top bar of the zone.</inlineHelpText>
    <label>Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>