force-app/main/default/objects/leankor__Zone__c/fields/leankor__Top__c.field-meta.xml
<CustomField>
    <fullName>leankor__Top__c</fullName>
    <defaultValue>300</defaultValue>
    <description>The top edge of the zone. This is similar to the y-coordinate, except that position zero starts just below the upper tab bar (i.e. you must subtract the tab bar thickness from Y).</description>
    <inlineHelpText>Enter the position of the top edge of the zone. This value is similar to the y-coordinate, except that position zero starts just below the upper tab bar (i.e. you must subtract the tab bar thickness from Y).</inlineHelpText>
    <label>Top</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>