force-app/main/default/objects/leankor__Zone__c/fields/leankor__Unit__c.field-meta.xml
<CustomField>
    <fullName>leankor__Unit__c</fullName>
    <defaultValue>&quot;effort&quot;</defaultValue>
    <description>this field contain two records (card/effort)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>