force-app/main/default/objects/leankor__Zone__c/fields/leankor__UrlLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__UrlLink__c</fullName>
    <description>This Field Is use too Save URL which Is linked with Zone.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Link</label>
    <type>Url</type>
</CustomField>