force-app/main/default/objects/leankor__Zone__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The value stream upon which this zone has been placed.</description>
    <inlineHelpText>Select the value stream which will include this zone.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Zones</relationshipLabel>
    <relationshipName>Zones</relationshipName>
    <type>Lookup</type>
</CustomField>