force-app/main/default/objects/leankor__Zone__c/fields/leankor__ValueStreamCardLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamCardLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Filed contains Kanban Card Id from which zone is linked.</description>
    <inlineHelpText>This Filed contains Kanban Card Id from which zone is linked.</inlineHelpText>
    <label>Value Stream Card Link</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Zones</relationshipLabel>
    <relationshipName>Zones</relationshipName>
    <type>Lookup</type>
</CustomField>