force-app/main/default/objects/leankor__Zone__c/fields/leankor__ValueStreamLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the value stream which provides a detailed process view under the are of the zone.</description>
    <inlineHelpText>Enter the value stream which provides a detailed process view under the are of the zone.</inlineHelpText>
    <label>Value Stream Link</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Zones (Value Stream Link)</relationshipLabel>
    <relationshipName>ZonesDrillDown</relationshipName>
    <type>Lookup</type>
</CustomField>