force-app/main/default/objects/leankor__Zone__c/fields/leankor__Width__c.field-meta.xml
<CustomField>
    <fullName>leankor__Width__c</fullName>
    <defaultValue>180</defaultValue>
    <description>The width of the zone measured in pixels.</description>
    <inlineHelpText>Enter the width of the zone measured in pixels.</inlineHelpText>
    <label>Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>