force-app/main/default/objects/leankor__Zone__c/fields/leankor__X__c.field-meta.xml
<CustomField>
    <fullName>leankor__X__c</fullName>
    <defaultValue>300</defaultValue>
    <description>The x-coordinate of the top, left corner of the zone.</description>
    <inlineHelpText>Enter the x-coordinate of the top-left corner of the zone.</inlineHelpText>
    <label>X Coordinate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>