force-app/main/default/objects/leankor__Zone__c/fields/leankor__Y__c.field-meta.xml
<CustomField>
    <fullName>leankor__Y__c</fullName>
    <defaultValue>300</defaultValue>
    <description>The y-coordinate of the top-left corner of the zone.</description>
    <inlineHelpText>Enter the y-coordinate (top edge) of the zone. Position zero starts at the top of the browser, not at the bottom of the upper tab bar.</inlineHelpText>
    <label>Y Coordinate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>