force-app/main/default/objects/leankor__Zone__c/fields/leankor__zoneMode__c.field-meta.xml
<CustomField>
    <fullName>leankor__zoneMode__c</fullName>
    <defaultValue>&quot;Free Form&quot;</defaultValue>
    <description>This field contain behaver for zone on baord.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contain behaver for zone on baord.</inlineHelpText>
    <label>Zone Mode</label>
    <length>250</length>
    <type>Text</type>
</CustomField>