force-app/main/default/objects/leankor__Zone__c/fields/leankor__ZoneTemplate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ZoneTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template from which this zone was created</description>
    <inlineHelpText>Select the zone template from which this zone will be created.</inlineHelpText>
    <label>Zone Template</label>
    <referenceTo>leankor__ZoneTemplate__c</referenceTo>
    <relationshipLabel>Zones</relationshipLabel>
    <relationshipName>Zones</relationshipName>
    <type>Lookup</type>
</CustomField>