force-app/main/default/objects/leankor__Zone__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>leankor__ValueStream__c</columns>
    <columns>leankor__Swimlane__c</columns>
    <columns>leankor__CardsPerRow__c</columns>
    <columns>leankor__ParentZone__c</columns>
    <columns>leankor__zoneMode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>